fix: selectbox pushes add button out of screen

--- a/styles/properties.less
+++ b/styles/properties.less
@@ -144,6 +144,7 @@
 
 .djs-properties-entry {
   margin-bottom: 9px;
+  width: 90%;
   .pp-field-wrapper {
     position: relative;
   }
